# ohtu-miniprojekti

./: .coveragerc  .env.template  .gitignore  .pylintrc  LICENSE.txt  Procfile  README.md  log.html  output.xml  pyproject.toml  pytest.ini  report.html  run_robot_tests.sh  schema.sql  style.css  tasks.py
.github/workflows/: main.yml
src/: AppLibrary.py  VinkkikirjastoLibrary.py  app.py  db.py  index.py  initialize_database.py  kayttaja_repository.py  kayttajat.py  lukuvinkki.py  routes.py  vinkki.py  vinkki_repository.py  vinkkikirjasto.py
src/static/: style.css
src/templates/: etusivu.html  index.html  layout.html  lukuvinkit.html  rekisterointi.html
src/tests/: conftest.py  home.robot  kayttaja_repository_test.py  kayttajat_test.py  lisaa_vinkki.robot  lukuvinkki_test.py  resource.robot  vinkki_repository_test.py  vinkki_test.py  vinkkikirjasto_test.py
src/tests/repositories/: vinkki_repository_test.py
src/tests/robot/: AppLibrary.py  home.robot  login.robot  login_resource.robot  register.robot  resource.robot  vinkki.robot
src/tests/services/: kayttajat_test.py  vinkkikirjasto_test.py
