[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = ""
authors = ["2laJ2 <tuulajakobsson@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.1"
pylint = "^2.12.2"
Flask = "^2.1.0"
robotframework = "^5.0"
invoke = "^1.7.0"
gunicorn = "^20.1.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.20.0"
robotframework-seleniumlibrary = "^6.0.0"
pytest-postgresql = "^4.1.1"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pylint = "^2.12.2"
autopep8 = "^1.6.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
